--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "posttest": "npm run lint"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^1.8.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
