--- a/package.json
+++ b/package.json
@@ -15,8 +15,16 @@
   },
   "dependencies": {
     "@auth0/auth0-react": "^1.8.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.4",
+    "@mui/material": "^5.2.4",
+    "history": "^5.2.0",
+    "observable-hooks": "^4.2.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^6.2.1",
+    "rxjs": "^7.4.0"
   },
   "devDependencies": {
     "@types/node": "^14.11.2",
